# movie-bet-bot

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.docker/: Dockerfile
.github/: CODEOWNERS
.github/workflows/: ci.yml  pre-commit.yml
movie_bet_bot/: __main__.py  main.py
movie_bet_bot/models/bot/: __init__.py  bot.py
movie_bet_bot/models/client/: __init__.py  client.py
movie_bet_bot/models/commands/: __init__.py  command.py  commands.py
movie_bet_bot/models/logger/: __init__.py  logger.conf  logger.py
movie_bet_bot/models/movies/: __init__.py  movies.py
movie_bet_bot/scripts/: contest_to_timeline.py
movie_bet_bot/utils/: __init__.py  config.py  constants.py  fetchers.py  images.py  utils.py
tests/models/: test_contest.py  test_films.py  test_fimlist.py  test_member.py
tests/resources/: test_config.yaml  test_list.py
tests/utils/: test_fetchers.py  test_utils.py
