[tool.poetry]
name = "movie-bet-bot"
version = "0.1.0"
description = "Discord bot that tracks multiple Letterboxd lists and periodically updates a channel with their status."
authors = ["Luke Schmitt <luke@lukeschmitt.me>"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "movie_bet_bot"}
]

[tool.poetry.dependencies]
python = "^3.10"
"discord.py" = "^2.1.0"
python-dotenv = "^0.21.0"
beautifulsoup4 = "^4.11.1"
pyyaml = "^6.0"
tmdbsimple = "^2.9.1"
html2image = "^2.0.1"
apscheduler = "^3.9.1.post1"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
lark = "^1.1.5"
pytest-asyncio = "^0.20.3"
pytest-cov = "^4.0.0"
coverage = "^7.1.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
taskipy = "^1.10.3"
pre-commit = "^3.0.0"
coverage-badge = "^1.1.0"

[tool.taskipy.tasks]
start = "python movie_bet_bot"
pre-commit = "pre-commit run -a"
test = "python -m unittest discover"
test-cov = "coverage run -m unittest discover"
cov-report = "coverage report"
cov-report-html = "coverage html"
coverage-badge = "coverage-badge -f -o images/coverage.svg"

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
